--- a/Pandas Tutorial.ipynb
+++ b/Pandas Tutorial.ipynb
@@ -2,27 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "os.chdir(\"/Users/guneshs/datasets\") #mac, linux\n",
-    "os.chdir(\"D:\\Pandas\") # windows"
+    "#os.chdir(\"D:\\Pandas\") # windows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -31,10 +32,11 @@
        "['.DS_Store',\n",
        " 'Iris_data_sample.txt',\n",
        " 'Iris_data_sample.xlsx',\n",
-       " 'Iris_data_sample.csv']"
+       " 'Iris_data_sample.csv',\n",
+       " 'Toyota.csv']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,13 +1135,638 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n"
+    "cars_data = pd.read_csv('Toyota.csv', index_col = 0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>KM</th>\n",
+       "      <th>FuelType</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>MetColor</th>\n",
+       "      <th>Automatic</th>\n",
+       "      <th>CC</th>\n",
+       "      <th>Doors</th>\n",
+       "      <th>Weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13500</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>46986</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>three</td>\n",
+       "      <td>1165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13750</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>72937</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13950</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>41711</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14950</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>48000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>13750</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>38500</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>12950</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>61000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1170</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Price   Age     KM FuelType  HP  MetColor  Automatic    CC  Doors  Weight\n",
+       "0  13500  23.0  46986   Diesel  90       1.0          0  2000  three    1165\n",
+       "1  13750  23.0  72937   Diesel  90       1.0          0  2000      3    1165\n",
+       "2  13950  24.0  41711   Diesel  90       NaN          0  2000      3    1165\n",
+       "3  14950  26.0  48000   Diesel  90       0.0          0  2000      3    1165\n",
+       "4  13750  30.0  38500   Diesel  90       0.0          0  2000      3    1170\n",
+       "5  12950  32.0  61000   Diesel  90       0.0          0  2000      3    1170"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars_data.head(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Attributes of data\n",
+    "\n",
+    "#TWO ways of copy in python\n",
+    "# 1 shallow copy\n",
+    "#sample = cars_data.copy(deep=False)\n",
+    "# 2 deep copy\n",
+    "cars_data1 = cars_data.copy(deep=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([   0,    1,    2,    3,    4,    5,    6,    7,    8,    9,\n",
+       "            ...\n",
+       "            1426, 1427, 1428, 1429, 1430, 1431, 1432, 1433, 1434, 1435],\n",
+       "           dtype='int64', length=1436)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#to display row labels\n",
+    "cars_data1.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Price', 'Age', 'KM', 'FuelType', 'HP', 'MetColor', 'Automatic', 'CC',\n",
+       "       'Doors', 'Weight'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#to display column labels\n",
+    "cars_data1.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14360"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#to get total no of elements\n",
+    "cars_data1.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1436, 10)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#to get dimensions of dataframe (df) rows and columns\n",
+    "cars_data1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index        11488\n",
+       "Price        11488\n",
+       "Age          11488\n",
+       "KM           11488\n",
+       "FuelType     11488\n",
+       "HP           11488\n",
+       "MetColor     11488\n",
+       "Automatic    11488\n",
+       "CC           11488\n",
+       "Doors        11488\n",
+       "Weight       11488\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#to get memory usage of each column\n",
+    "cars_data1.memory_usage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars_data1.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>KM</th>\n",
+       "      <th>FuelType</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>MetColor</th>\n",
+       "      <th>Automatic</th>\n",
+       "      <th>CC</th>\n",
+       "      <th>Doors</th>\n",
+       "      <th>Weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13500</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>46986</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>three</td>\n",
+       "      <td>1165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13750</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>72937</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13950</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>41711</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14950</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>48000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>13750</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>38500</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>12950</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>61000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>16900</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>??</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>????</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>18600</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>75889</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>21500</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>19700</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>192</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>12950</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>71138</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>????</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1105</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Price   Age     KM FuelType    HP  MetColor  Automatic    CC  Doors  Weight\n",
+       "0  13500  23.0  46986   Diesel    90       1.0          0  2000  three    1165\n",
+       "1  13750  23.0  72937   Diesel    90       1.0          0  2000      3    1165\n",
+       "2  13950  24.0  41711   Diesel    90       NaN          0  2000      3    1165\n",
+       "3  14950  26.0  48000   Diesel    90       0.0          0  2000      3    1165\n",
+       "4  13750  30.0  38500   Diesel    90       0.0          0  2000      3    1170\n",
+       "5  12950  32.0  61000   Diesel    90       0.0          0  2000      3    1170\n",
+       "6  16900  27.0     ??   Diesel  ????       NaN          0  2000      3    1245\n",
+       "7  18600  30.0  75889      NaN    90       1.0          0  2000      3    1245\n",
+       "8  21500  27.0  19700   Petrol   192       0.0          0  1800      3    1185\n",
+       "9  12950  23.0  71138   Diesel  ????       NaN          0  1900      3    1105"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#indexing and selecting data\n",
+    "# slicing operator []\n",
+    "# dot operaror .\n",
+    "cars_data1.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Diesel'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# at : it provides label-based lookup\n",
+    "# iat : it provides integer-based lookup\n",
+    "cars_data1.at[4, 'FuelType']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'41711'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars_data1.iat[2,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       Diesel\n",
+       "1       Diesel\n",
+       "2       Diesel\n",
+       "3       Diesel\n",
+       "4       Diesel\n",
+       "5       Diesel\n",
+       "6       Diesel\n",
+       "7          NaN\n",
+       "8       Petrol\n",
+       "9       Diesel\n",
+       "10      Petrol\n",
+       "11      Petrol\n",
+       "12      Petrol\n",
+       "13      Petrol\n",
+       "14      Petrol\n",
+       "15      Petrol\n",
+       "16      Petrol\n",
+       "17      Petrol\n",
+       "18      Petrol\n",
+       "19      Petrol\n",
+       "20      Petrol\n",
+       "21         NaN\n",
+       "22      Petrol\n",
+       "23      Petrol\n",
+       "24      Petrol\n",
+       "25      Petrol\n",
+       "26         NaN\n",
+       "27      Petrol\n",
+       "28      Petrol\n",
+       "29         NaN\n",
+       "         ...  \n",
+       "1406    Petrol\n",
+       "1407    Petrol\n",
+       "1408    Petrol\n",
+       "1409    Petrol\n",
+       "1410    Petrol\n",
+       "1411    Petrol\n",
+       "1412    Petrol\n",
+       "1413    Petrol\n",
+       "1414    Petrol\n",
+       "1415    Petrol\n",
+       "1416    Petrol\n",
+       "1417    Petrol\n",
+       "1418    Petrol\n",
+       "1419    Petrol\n",
+       "1420       NaN\n",
+       "1421    Petrol\n",
+       "1422       NaN\n",
+       "1423    Petrol\n",
+       "1424    Petrol\n",
+       "1425    Petrol\n",
+       "1426    Petrol\n",
+       "1427    Petrol\n",
+       "1428    Petrol\n",
+       "1429    Petrol\n",
+       "1430    Petrol\n",
+       "1431    Petrol\n",
+       "1432    Petrol\n",
+       "1433    Petrol\n",
+       "1434       NaN\n",
+       "1435    Petrol\n",
+       "Name: FuelType, Length: 1436, dtype: object"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# .loc[]\n",
+    "cars_data1.loc[:,'FuelType']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
