--- a/Pandas Tutorial.ipynb
+++ b/Pandas Tutorial.ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#to change directory\n",
     "os.chdir(\"/Users/guneshs/datasets\") #mac, linux\n",
     "#os.chdir(\"D:\\Pandas\") # windows"
    ]
@@ -42,6 +43,7 @@
     }
    ],
    "source": [
+    "#to list files in the present directory\n",
     "os.listdir()"
    ]
   },
@@ -51,6 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#load data from CSV file to a pandas dataframe\n",
     "data_csv = pd.read_csv('Iris_data_sample.csv')"
    ]
   },
@@ -788,7 +791,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#to set index column\n",
+    "#to set index column of df\n",
     "data_csv = pd.read_csv('Iris_data_sample.csv', index_col=0)"
    ]
   },
@@ -798,7 +801,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#to replace the junk values\n",
+    "#to replace the junk values in df\n",
     "data_csv = pd.read_csv('Iris_data_sample.csv', \n",
     "                       index_col=0, na_values=[\"??\", \"###\"])"
    ]
@@ -898,7 +901,7 @@
     }
    ],
    "source": [
-    "#to get first 5 rows\n",
+    "#to get first 5 rows...if you want n values...place head(n)...n can be 6 or anyno.\n",
     "data_csv.head()\n",
     "\n",
     "#to get last 5 rows\n",
@@ -911,7 +914,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import excel files\n",
+    "#importing excel files\n",
     "data_xlsx=pd.read_excel('Iris_data_sample.xlsx', sheet_name='Iris_data')"
    ]
   },
@@ -1017,10 +1020,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import txt files\n",
+    "#importing txt files\n",
     "data_txt1=pd.read_table('Iris_data_sample.txt', sep=\" \")\n",
     "\n",
-    "#data_txt1=pd.read_table('Iris_data_sample.txt', delimiter=\" \")\n",
+    "#data_txt1 = pd.read_table('Iris_data_sample.txt', delimiter=\" \")\n",
     "#you can also include tabs (\"\\t\") , commas and blanks "
    ]
   },
@@ -1139,6 +1142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Car dataset  \n",
     "cars_data = pd.read_csv('Toyota.csv', index_col = 0)"
    ]
   },
@@ -1291,9 +1295,11 @@
     "#Attributes of data\n",
     "\n",
     "#TWO ways of copy in python\n",
-    "# 1 shallow copy\n",
-    "#sample = cars_data.copy(deep=False)\n",
-    "# 2 deep copy\n",
+    "\n",
+    "# 1. shallow copy\n",
+    "# sample = cars_data.copy(deep=False)\n",
+    "\n",
+    "# 2. deep copy\n",
     "cars_data1 = cars_data.copy(deep=True)\n"
    ]
   },
@@ -1435,6 +1441,7 @@
     }
    ],
    "source": [
+    "#to get no. of axes / array dimensions\n",
     "cars_data1.ndim"
    ]
   },
@@ -1632,8 +1639,8 @@
    ],
    "source": [
     "#indexing and selecting data\n",
-    "# slicing operator []\n",
-    "# dot operaror .\n",
+    "#slicing operator [] and dot operaror . used for indexing\n",
+    "#it provides quick and easy access to pd data structures \n",
     "cars_data1.head(10)"
    ]
   },
@@ -1654,6 +1661,7 @@
     }
    ],
    "source": [
+    "# To access scalar values, use at and iat methods\n",
     "# at : it provides label-based lookup\n",
     "# iat : it provides integer-based lookup\n",
     "cars_data1.at[4, 'FuelType']"
@@ -1757,6 +1765,7 @@
     }
    ],
    "source": [
+    "# To access a group of rows and columns by label(s)\n",
     "# .loc[]\n",
     "cars_data1.loc[:,'FuelType']"
    ]
@@ -1766,7 +1775,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cars_data1"
+   ]
   }
  ],
  "metadata": {
